syntax = "proto3";
package github.com.DeNisBuLgAkOv.msa_big_tech.auth.v1;

import "v1/auth_messages.proto";

import "google/api/annotations.proto";


option go_package = "msa_big_tech/pkg/api/proto/v1;auth";


service AuthService {
    // Регистрация
    rpc Register(RegisterRequest) returns (RegisterResponse) {
        option (google.api.http) = {
        post: "/api/v1/register"
        body: "*"
        };
    }
    // Авторизация
    rpc Login(LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
        post: "/api/v1/login"
        body: "*"
        };
    }
    // Обновление токена
    rpc Refresh(RefreshRequest) returns (RefreshResponse) {
        option (google.api.http) = {
        post: "/api/v1/refresh"
        body: "*"
        };
    }
}