syntax = "proto3";

package github.com.DeNisBuLgAkOv.msa_big_tech.social.v1;

import "v1/social_messages.proto";
import "google/api/annotations.proto";

option go_package = "msa_big_tech/pkg/api/proto/v1;social";


service SocialService {
    // Отправление запроса "В Друзья"
    rpc SendFriendRequest(SendFriendRequestRequest) returns (SendFriendRequestResponse) {
        option (google.api.http) = {
           post: "/api/v1/friends/request"
        };
    }
    // Получение списка входящих запросов
    rpc ListRequests(ListRequestsRequest) returns (ListRequestsResponse) {}
    // Принятие заявки
    rpc AcceptFriendRequest(AcceptFriendRequestRequest) returns (AcceptFriendRequestResponse) {}
    // Отклонение заявки
    rpc DeclineFriendRequest(DeclineFriendRequestRequest) returns (DeclineFriendRequestResponse) {}
    // Удаление из "Друзей"
    rpc RemoveFriend(RemoveFriendRequest) returns (RemoveFriendResponse) {}
    // Получение списка "Друзей"
    rpc ListFriends(ListFriendsRequest) returns (ListFriendsResponse) {}
}